<resources>
    <string name="app_name">JakeWarton &amp; Infinum</string>
    <string name="events_title">Repository details and last Event</string>

    <string name="repository_owner">Owner</string>
    <string name="repository_owner_url">Owner URL</string>
    <string name="repository_repo">Repo</string>
    <string name="repository_repo_url">Repo URL</string>
    <string name="repository_event_type">Event Type</string>
    <string name="repository_event_actor">Event Actor"</string>
    <string name="repository_event_url">Event Url</string>
    <string name="repository_default_value">..</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    >
</resources>